--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,24 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "6.5.1"
+    id "io.freefair.lombok" version "8.10"
 }
 
 group = 'by.clevertec'
 version = '1.0-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.0-rc1'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.18.0-rc1'
 
-    testImplementation platform('org.junit:junit-bom:5.9.1')
+    testImplementation platform('org.junit:junit-bom:5.10.3')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-core:5.13.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.13.0'
 }
 
 test {
